// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component should render an ordered list correctly 1`] = `
<div>
  <ol
    class="List List--ordered"
  >
    children
  </ol>
</div>
`;

exports[`List component should render correctly 1`] = `
<div>
  <ul
    class="List"
  >
    children
  </ul>
</div>
`;
